2008-07-19  Markus Steinborn <msteinbo@uni-paderborn.de>

	* src/Makefile.am: The .ad and .dat files are put into /usr/share/gv
	(Patch from Orion Poplawski <orion@cora.nwra.com>)
	
	* configure.ac: Test for the presence of "mkstemp()"
	
	* src/file.c (file_getTmpFilename): Use mkstemp (if available) for
	getting the temporary filename

2008-07-16  Markus Steinborn <msteinbo@uni-paderborn.de>

	* src/info.c: Trigger info popup on "ERROR:" and "error:", too. 
	Needed for older gs.

2008-07-12  Markus Steinborn <msteinbo@uni-paderborn.de>

	* configure.ac, src/versionp.h: Bump version to 3.6.5.90.

	* src/main.c, src/paths.h: Heuristically use Xinerama to get display
	resolution iff the current display size looks like a single monitor
	(experimental)
	
	* src/gv_message.h: Improvement of "--scale" documentation which should
	have been included in 3.6.4.91, but it has not been.

2008-07-05  Markus Steinborn <msteinbo@uni-paderborn.de>

	* configure.ac, src/versionp.h: Bump version to 3.6.5.

2008-06-22  Markus Steinborn <msteinbo@uni-paderborn.de>

	* src/options_*.c, src/resource.c: Save GV.version resource to ~/.gv,
	if GV.version in ~/.gv is missing, assume it to be "gv 3.5.2".

2008-06-21  Markus Steinborn <msteinbo@uni-paderborn.de>

	* configure.ac, src/versionp.h: Bump version to 3.6.4.91.

2008-06-18  Markus Steinborn <msteinbo@uni-paderborn.de>

	* doc/gv.texi: Update manual

	* src/gv_message.h: Update usage message
	
	* src/main_globals: Add fullscreen_p, presentation_p and ascale_p
	
	* src/main.c: Add parsing of --fullscreen and of --scale with a float and
	--presentation
	
	* src/options_gv.c: Include math.h

2008-06-17  Markus Steinborn <msteinbo@uni-paderborn.de>

	* src/callbacks.c (cb_setPagemedia): If autoresize is off and any
	special scale is used, then recalculate the scale.
	
	* src/misc.c (show_page): If autoresize is off and any
	special scale is used, display of new page is required and orientation