@@ -202,6 +202,7 @@ $(srcdir)/gv_intern_res_unix.dat :
 	@echo "GV.gsSafer:		True" >> $(srcdir)/gv_intern_res_unix.dat
 	@echo "GV.gsQuiet:		True" >> $(srcdir)/gv_intern_res_unix.dat
 	@echo "GV.infoVerbose:		Warnings" >> $(srcdir)/gv_intern_res_unix.dat
+	@echo "GV.xinerama:		Auto" >> $(srcdir)/gv_intern_res_unix.dat
 	@echo "GV.gsArguments:		-dFIXEDMEDIA" >> $(srcdir)/gv_intern_res_unix.dat
 	@echo "GV.uncompressCommand:	gzip -d -c %s > %s" >> $(srcdir)/gv_intern_res_unix.dat
 	@echo "GV.printCommand:	$(PRINT_COMMAND)" >> $(srcdir)/gv_intern_res_unix.dat
