@@ -15,6 +15,9 @@ by a '#' or a '*' or a '?'. A
 
 # "ERROR:" and "error:" now also trigger the info popup in error mode
 
+# Xinerama support. It can be configured by the "xinerama"-resource. Its values
+can be "On", "Off" or "Auto". "Auto" is the default.
+
 %%%%%%%%%%%%%%%%%%% GV 3.6.5  (July 2008) %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 # GV 3.6.4.91 has been released as GV 3.6.5 with no changes
